--- a/c/cr/cro/crowdeye.com.html
+++ b/c/cr/cro/crowdeye.com.html
@@ -1,87 +1,29 @@
-<!--The following is the downloaded HTML source of the crowdeye.com privacy policy that was archived on 2009-06-22.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090622201335id_/http%3A//crowdeye.com/privacy.aspx) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the crowdeye.com privacy policy that was archived on 2009-10-16.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20091016113740id_/http%3A//crowdeye.com/privacy.aspx) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html><head>
-<title>Contact</title>
-<style>
-    body					{font-family: arial, verdana, sans-serif;}
-    body.home				{background: #bfd9c5 url(/img/body.png) repeat-x}
-    .Home					{margin: 10px auto 20px auto; width: 500px}
-	.Main					{margin: 0px auto 10px auto; padding-bottom: 20px; padding-top: 40px; width: 900px; background-color: white; }
-	#Contents				{margin: 0px auto 10px auto; padding-bottom: 10px; padding-top: 5px; background-color: white; 
-	     					-moz-border-radius: 10px;
-							-webkit-border-radius: 10px;
-							border-radius: 10px} /* for eventual ie support */
-	.Clear					{clear: both}
-	.ThinLine				{clear: both; height: 1px; width: 100%; background-color: gray; font-size: 0px; line-height: 0px;}
-    .HeaderLong				{margin-left: auto; margin-right: auto;}
-    .HeaderShort			{margin-left: auto; margin-right: auto; width: 900px;}
-    .HeaderHome				{margin-left: auto; margin-right: auto; width: 700px}
-    .Logo					{float:left;}
-    .LogoCenter				{margin-left: auto; width: 350px; margin-right: auto}
-    .HeaderText				{float: right; color: midnightblue; margin-right: 10px; margin-top: 10px; font-size: x-large; font-weight: bold; padding: 0px 10px 0px 10px;}
-    .FooterLink				{margin: 5px 12px 5px 12px; padding: 5px 0px 5px 0px; font-size: 75%; color: slategray; text-decoration: none}
-    .FooterLink:hover		{color: Black}
-    .FooterLong				{background-color: white; padding-top: 10px; margin: 0px auto 0px auto; border-top: dotted 2px slategray; text-align: center; }
-    .FooterShort			{background-color: white;  padding-top: 10px; margin: 0px auto 0px auto; border-top: dotted 2px slategray; width: 900px; text-align: center; }
-    .FooterHome				{background-color: white; padding-top: 10px; margin: 0px auto 0px auto; border-top: dotted 2px slategray; width: 700px; text-align: center; }
-    .Contact				{margin: 20px 50px 20px 50px; padding-top: 20px}
-	.Small 					{font-weight: bold; font-size: small; color: Gray; padding: 0px 0px 0px 5px}
-	.Medium					{font-weight: bold; font-size: medium; color: slategray;  letter-spacing: -.05em; padding: 0px 0px 0px 5px}
-	.Large					{font-weight: bold; font-size: large; color: Dimgray; letter-spacing: -.05em; padding: 0px 0px 0px 5px}
-	.Largest				{font-weight: bold; font-size: x-large; color: darkslategray; letter-spacing: -.05em; padding: 0px 0px 0px 5px}
-	.HeaderLinks, .HeaderLinks:visited	{color: #0044b5; padding-left: 5px; font-size: small; margin-right: 3px}
+<title>CrowdEye - Privacy</title>
+<link rel="stylesheet" href="/global.css?v=1" type="text/css">
 
-	#ViewerLeftColumn		{float: left; width: 150px; margin-left: 10px; }
-	#ViewerResults          {width: auto; margin: 10px 10px 0px 160px; border: solid 3px steelblue; border-top: none; padding-top: 0px; height: 650px}
-	#ViewerMidColumn		{float: left; width: 375px;}
-	#ViewerRightColumn		{width: auto; padding: 0px 0px 0px 370px; }
-	#ViewTitle				{margin-top: 15px; font-size: large;}
-	#ViewerLabels			{margin-top: 20px}
-	.BlueHeader				{background-color: #d3e3e9; font-weight: bold; line-height: 160%; font-size: small; border-top: solid 3px steelblue}
-    .WhiteHeader			{line-height: 150%; font-size: small; padding-left: 20px; border-top: solid 3px steelblue}
-    #FilterHeader			{width: 125px; float: left;}
-    #ViewerChart            {float: left; margin: 20px 0px 0px 0px}
-    #ViewerTagCloud         {float: left; margin-top: 30px; padding: 0px 15px 0px 20px; line-height: 170%; text-align: justify}
-    #TopTwitterStories, #TopNewsHeadlines      {margin: 10px 10px 5px 10px}
-    #TopTwitterStories		{height: 400px; overflow: hidden; margin-bottom: 10px}
-    .Label					{line-height: 150%; font-size: small; color: steelblue; cursor: pointer; margin-left: 0px; text-decoration: underline; padding-left: 20px; font-weight: bold}
-	.EditLink				{text-decoration: underline; cursor: pointer; font-size:smaller; margin-left: 20px}
-	.TimeSpan				{padding: 3px 15px 3px 0px; cursor: pointer;}
-	.TimeSpan:hover			{text-decoration: underline}
-	.TwitterHeadline		{text-decoration: underline; font-weight: bold; color: #0044b5; }
-	.TwitterBlurb			{margin-left: 0px}
-	.CompleteTweet			{margin-left: 5px;  margin-right: 5px; font-size: small;}
-	.TweetId				{text-decoration: underline; color: #0044b5}
-	.Tweet					{text-decoration: none; margin-right: 5px}
-	.TweetTime				{color: DarkSlateGray; font-size: smaller;}
-	.TweetSource			{color: #0f8f20; font-size: small}
-	.MoreTweetsLink			{text-decoration: underline; cursor: pointer; float: right; font-size: small; margin-right: 5px; margin-bottom: 5px}
-	#FilterText				{font-weight: bold; height: 20px; padding-left: 3px; margin-top: 3px}
-	#Filter					{padding-left: 15px; margin-top: 5px}
-	#NavLinks				{cursor: pointer; color: #0044b5; text-align: center; left: 65%; margin: 20px 5px 10px 0px; font-size: small; position: absolute;}
-	a.CloudLink				{text-decoration: none; padding-top: 5px}
-	a.CloudLink:hover		{background-color: Gainsboro; cursor:pointer}
-	span.Blurb				{font-size: smaller}
-	#ShowCloudLink, #ShowHashLink	{margin-left: 5px; margin-right: 5px; cursor: pointer; width: 5px; padding-left: 2px; padding-right: 2px}
-	.NavContents			{border: solid 2px #d3e3e9; border-top: none; margin-right: 5px; overflow: hidden; padding-bottom: 3px}
-	.NavHeader				{background-color: #d3e3e9; margin: 15px 5px 0px 0px; border: solid 2px #d3e3e9;}
-	.NavItem				{color: #0044b5; font-size: small; margin-left: 5px; text-decoration: underline; line-height: 120%; cursor: pointer}
-	.Debug					{display: none} 
-	#Login					{display: none} <!-- set this to 'none' when we ship beta -->
-</style>
 <link rel="SHORTCUT ICON" href="/img/eye.ico">
 </head>
 <body>
 
 <div class="HeaderShort">
-<a class="Logo" href="/home.aspx"><img src="/img/crowdeyebetasm.png" style="border:none;" alt="CrowdEye"></a><form id="SearchForm" action="/viewer.aspx" method="post"><div style="float: left; margin: 25px 10px 10px 20px"><input type="text" size="50" name="SearchBox"><input style="width:75px; margin-left: 10px" type="submit" value="Search"></div></form><div style="clear: right"></div><div style="float: right;"><div id="Login"><span class="HeaderLinks"></span><a class="HeaderLinks" href="/myinfo.aspx?show=views&amp;mode=all">Settings</a><a class="HeaderLinks" href="/logout.aspx">Logout</a></div></div>
-  <script>
-    form = document.getElementById("SearchForm")
-    form.SearchBox.focus();
-  </script>
-  
-  
+<a class="FooterLink" style="position: absolute; top: 0px; left: 85%" href="javascript:SignInWithTwitter()"><img style="border: none; width: 136px; height: 16px" src="/img/signin.png"></a>
+			<script>
+			function SignInWithTwitter()
+			{
+				var date = new Date();
+				var ms = date.getTime();
+				ms = ms + 300000; // add 5 minutes
+				date.setTime(ms);
+				strDateExpiration = date.toUTCString();
+				document.cookie = "url=" + window.location.href + "; expires=" + strDateExpiration;
+				window.location = encodeURI("/twitauth/authlogin.aspx");
+			}
+			</script>
+			<div><a style="float: left; margin-right: 20px" href="/home.aspx"><img src="/img/crowdeyebetasm.png" style="border:none; width: 239px; height: 67px" alt="CrowdEye"></a><form id="SearchForm" action="viewer.aspx" method="get"><div style="float: left; margin: 20px 10px 0px 0px"><input type="text" size="40" name="query" value=""><input style="width:75px; margin-left: 10px" type="submit" value="Search"></div></form></div><div style="clear: right"></div>
 </div>
 <div class="Main">
 <div class="Contact" style="width: 600px">
@@ -131,5 +73,7 @@
 <div class="FooterShort" "="">
 <div style="clear:both"></div><div><span style="font-size: 75%; color: darkslategray; margin-right: 30px">© 2009 CrowdEye</span><a class="FooterLink" href="/home.aspx">Home</a><a class="FooterLink" href="/aboutus.aspx?info=co">About Us</a><a class="FooterLink" href="/aboutus.aspx?info=contact">Contact Us</a><a class="FooterLink" href="/terms.aspx">Terms</a><a class="FooterLink" href="/privacy.aspx">Privacy</a><a class="FooterLink" href="http://www.crowdeye.wordpress.com">Blog</a><a class="FooterLink" href="http://www.twitter.com/crowdeye">Follow Us on Twitter</a></div>
 </div>
+<script type="text/javascript"> var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www."); document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E")); </script><script src="https://ssl.google-analytics.com/ga.js" type="text/javascript"></script> 
+<script type="text/javascript"> try { var pageTracker = _gat._getTracker("UA-9572230-1"); pageTracker._trackPageview(); } catch(err) {}</script> 
 
 </body></html>
