--- a/s/sc/sco/scottslawnservice.com.html
+++ b/s/sc/sco/scottslawnservice.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the scottslawnservice.com privacy policy that was archived on 2009-06-15.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090615175150id_/http%3A//scottslawnservice.com/index.cfm/event/privacyPolicy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the scottslawnservice.com privacy policy that was archived on 2009-10-16.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20091016205736id_/http%3A//www.scottslawnservice.com/index.cfm/event/privacyPolicy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
 <title>Privacy policy - ScottsLawnService.com</title>
