--- a/b/bu/bus/businesshighlight.org.html
+++ b/b/bu/bus/businesshighlight.org.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the businesshighlight.org privacy policy that was archived on 2009-06-16.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090616205406id_/http%3A//www.businesshighlight.org/privacy-policy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the businesshighlight.org privacy policy that was archived on 2009-10-17.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20091017093601id_/http%3A//www.businesshighlight.org/privacy-policy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3c.org/TR/1999/REC-html401-19991224/loose.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
 	<title>
@@ -210,13 +210,15 @@ function validateNewsletterForm(frm){
 <br><br>
 </div><!--END FOOTER DIV -->
 </div><!--END WRAPER DIV-->
-
-<script type="text/javascript"><!--
-//<![CDATA[
-document.write('<scr'+'ipt type="text/javascript" src="http://stats.treeworks.us/twatch/jslogger.php?ref='+( document["referrer"]==null?'':escape(document.referrer))+'&pg='+escape(window.location)+'&altinst=businesshighlight"></scr'+'ipt>');
-//]]>
-//--></script><script type="text/javascript" src="http://stats.treeworks.us/twatch/jslogger.php?ref=&amp;pg=https%3A//web.archive.org/web/20090616205406id_/http%253A//www.businesshighlight.org/privacy-policy&amp;altinst=businesshighlight"></script>
-
+<script type="text/javascript">
+var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+</script><script src="https://ssl.google-analytics.com/ga.js" type="text/javascript"></script>
+<script type="text/javascript">
+try {
+var pageTracker = _gat._getTracker("UA-58132-24");
+pageTracker._trackPageview();
+} catch(err) {}</script>
 
 
 </body></html>
