--- a/c/ca/cab/cabelas.com.html
+++ b/c/ca/cab/cabelas.com.html
@@ -1,9 +1,7 @@
-<!--The following is the downloaded HTML source of the cabelas.com privacy policy that was archived on 2009-06-17.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090617193316id_/http%3A//www.cabelas.com/community-customerservice-privacy.shtml) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the cabelas.com privacy policy that was archived on 2009-10-17.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20091017112304id_/http%3A//www.cabelas.com/community-customerservice-privacy.shtml) for the most accurate reproduction.-->
 
 <html><head>
-<base href="http://www.cabelas.com">
-
 <title>Privacy Policy : Cabela's</title>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1"> <link href="http://www.cabelas.com/cabelas/en/common/css/cab.css" type="text/css" rel="stylesheet" name="cabelas-style">
 <script language="Javascript1.1">
@@ -12,7 +10,7 @@
 		var gs_mmc_pla = "";
 		var gs_mmc_ite = "netcon";
 		</script></head>
-<body bgcolor="#FFFFFF" topmargin="0" leftmargin="0" marginwidth="0" marginheight="0"><img src="http://tracking.percentmobile.com/pixel/ff184794-39c5-11de-8d8e-12313900c5b8" alt="." width="2" height="2">          
+<body bgcolor="#FFFFFF" topmargin="0" leftmargin="0" marginwidth="0" marginheight="0">          
 
 
 <script language="JavaScript">
@@ -751,6 +749,7 @@ if (foresee.triggerParms["evtListener"] == 1) foresee.fsrAttachEvent(window, "lo
 foresee.ForeCStdSetCookie(foresee.triggerParms["oecpp_JSESSIONID"],foresee.ForeCStdGetCookie('JSESSIONID'), null,'/',foresee.triggerParms['domain']);
 var js_custreferer = document.referrer;
 foresee.triggerParms["cpp_5"] = "referer:" + foresee.cppUrlPatch(js_custreferer);
+foresee.triggerParms["cpp_6"] = "cabid:" + foresee.cppUrlPatch(foresee.ForeCStdGetCookie('JSESSIONID'));
 function closeTrackerWin() {
 if (foresee.ForeCStdGetCookie("ScoutRunningCheck") !=null && foresee.ForeCStdGetCookie(ckAlreadyShown) == null) {
 var trackerWin = window.open("","SurveyWindowInformative");
@@ -838,7 +837,7 @@ document.searchForm.Ntt.select();
 <table cellspacing="0" border="0">
 <tbody><tr>
 <td>
-<table cellpadding="0" cellspacing="0" border="0" class="sbg"> <form action="http://www.cabelas.com/cabelas/en/common/search/search-results1.jsp?cmCat=netcon&amp;cm_ven=netcon&amp;cm_cat=&amp;cm_pla=&amp;cm_ite=netcon" onsubmit="formHasJS(this); if(Ntt.value==''){Ntt.value='keyword or item #'};" name="searchForm" method="get"></form><input value="ISO-8859-1" type="hidden" name="_dyncharset">
+<table cellpadding="0" cellspacing="0" border="0" class="sbg"> <form action="http://www.cabelas.com/cabelas/en/common/search/search-results1.jsp?cmCat=netcon&amp;cm_ven=netcon&amp;cm_cat=&amp;cm_pla=&amp;cm_ite=netcon" onsubmit="formHasJS(this); if(Ntt.value.replace(/\s*$/, '')==''){Ntt.value='keyword or item #'};" name="searchForm" method="get"></form><input value="ISO-8859-1" type="hidden" name="_dyncharset">
 
 <input type="hidden" name="selectedPerPage" value=""> <input value="false" type="hidden" name="hasJS"><input value=" " type="hidden" name="_D:hasJS">
 <tbody><tr valign="middle">
@@ -918,11 +917,10 @@ document.searchForm.Ntt.select();
 </tbody></table>
 <table width="760" height="27" border="0" cellpadding="0" cellspacing="0">
 <tbody><tr>
-<td colspan="8"> <img width="760" height="4" src="http://www.cabelas.com/cabelas/en/images/new_nav/ap_low_01.gif" alt=""></td>
+<td colspan="8"> <img width="760" height="4" src="http://www.cabelas.com/cabelas/en/images/spacer.gif" alt=""></td>
 </tr>
 <tr>
-<td>
-<a href="http://www.cabelas.com/community-customerservice-guarantee.shtml" target="_blank" onclick="openGuaranteeWindow(this.href); return false;"><img width="143" height="23" src="http://www.cabelas.com/cabelas/en/images/new_nav/ap_low_02.gif" border="0" alt="Customer Service Guarantee"></a></td>
+<td> <img width="143" height="23" src="http://www.cabelas.com/cabelas/en/images/spacer.gif" border="0" alt=""></td>
 <td> <a href="http://www.cabelas.com/online-store.shtml"><img width="47" height="23" src="http://www.cabelas.com/cabelas/en/images/new_nav/ap_low_03a.gif" border="0" alt=""></a></td>
 <td> <a href="http://www.cabelas.com/bargain-cave.shtml"><img width="93" height="23" src="http://www.cabelas.com/cabelas/en/images/new_nav/ap_low_04.gif" border="0" alt="Featured Bargains in Hunting, Camping Supplies &amp; More"></a></td>
 <td> <a href="http://www.cabelas.com/outdoor-info.shtml"><img width="92" height="23" src="http://www.cabelas.com/cabelas/en/images/new_nav/ap_low_05.gif" border="0" alt="Hunting Tips, Fishing Tips, &amp; Game Recipes"></a></td>
@@ -1194,37 +1192,39 @@ document.searchForm.Ntt.select();
        
 <div style="text-align:center">
 <br><br><br><br>
-    <style type="text/css">
-        .tag-cloud { background-color: #004b2c; line-height: 1.3; }
-        .tag-cloud .XS { font-size: 1em;}
-        .tag-cloud .S { font-size: 1.3em;}
-        .tag-cloud .M { font-size: 1.5em;}
-        .tag-cloud .M { font-size: 1.7em;}
-        .tag-cloud .L { font-size: 1.9em;}
-        .tag-cloud .XL { font-size: 2.1em;}
-        .tag-cloud a { color:#006600; }
-        .tag-cloud a:hover { color:white; background-color: #006600; }
-    </style>
-&nbsp;
-<table border="1" cellpadding="0" cellspacing="0" width="600" align="center">
-  <tbody><tr align="center" bgcolor="#004b2c">
-    <td height="24" class="header"><b><font color="#ffffff">Cabela's Site Tracker - Tag Cloud</font></b></td>
-</tr>
-<tr>
-<td>
-      <table border="0" cellpadding="5" cellspacing="0" width="100%" class="tag-cloud">
 
-        <tbody><tr align="center" bgcolor="#ecece0">
+                                <style type="text/css">
+                                .tag-cloud { background-color: #004b2c; line-height: 1.3; }
+                                .tag-cloud .XS { font-size: 1em;}
+                                .tag-cloud .S { font-size: 1.3em;}
+                                .tag-cloud .M { font-size: 1.5em;}
+                                .tag-cloud .M { font-size: 1.7em;}
+                                .tag-cloud .L { font-size: 1.9em;}
+                                .tag-cloud .XL { font-size: 2.1em;}
+                                .tag-cloud a { color:#006600; }
+                                .tag-cloud a:hover { color:white; background-color: #006600; }
+                                </style>
+                                &nbsp;
+                                <table border="1" cellpadding="0" cellspacing="0" width="600" align="center">
+                                <tbody><tr align="center" bgcolor="#004b2c">
+                                <td height="24" class="header"><b><font color="#ffffff">Most Hunted Products</font></b></td>
+                                </tr>
+                                <tr>
+                                <td>  
+                                <table border="0" cellpadding="5" cellspacing="0" width="100%" class="tag-cloud">
 
-          <td>
+                                <tbody><tr align="center" bgcolor="#ecece0">
 
-<a class="XL" href="http://www.cabelas.com/gc-1/0005586991757a.shtml">Gift Card</a>&nbsp; &nbsp;<a class="L" href="http://www.cabelas.com/gc-1/0005586990011b.shtml">Online Gift Card</a>&nbsp; &nbsp;<a class="M" href="http://www.cabelas.com/prod-1/0030571823344a.shtml">Guidewear Toggle Boat Shoes</a>&nbsp; &nbsp;<a class="XL" href="http://www.cabelas.com/link-12/pod/0012449.shtml">Trail Shorts</a>&nbsp; &nbsp;<a class="XS" href="http://www.cabelas.com/prod-1/0063995904207a.shtml">Guidewear GXII Short Sleeve Shirt</a>&nbsp; &nbsp;<a class="S" href="http://www.cabelas.com/prod-1/0011720110248a.shtml">Blue Fox Super Vibrax Spinners</a>&nbsp; &nbsp;<a class="S" href="http://www.cabelas.com/prod-1/0056209122589a.shtml">Berkley PowerBait Manic Shad</a>&nbsp; &nbsp;<a class="L" href="http://www.cabelas.com/prod-1/0045297951280a.shtml">Pocket Tee Shirt</a>&nbsp; &nbsp;<a class="XS" href="http://www.cabelas.com/link-12/product/0023378112783a.shtml">Rapala Original Floating Lure</a>&nbsp; &nbsp;<a class="S" href="http://www.cabelas.com/prod-1/0003715212964a.shtml">223 ammo</a>&nbsp; &nbsp;<a class="M" href="http://www.cabelas.com/ssubcat-1/cat140009.shtml">ammo sales</a>&nbsp; &nbsp;<a class="XL" href="http://www.cabelas.com/subcat-1/cat21466.shtml">ATV Accessories</a>&nbsp; &nbsp;<a class="M" href="http://www.cabelas.com/subcat-1/cat21282.shtml">Boat Seats</a>&nbsp; &nbsp;<a class="S" href="http://www.cabelas.com/boating.shtml">Boating</a>&nbsp; &nbsp;<a class="M" href="http://www.cabelas.com/prod-1/0045326521951a.shtml">ATV Winch Kit</a>&nbsp; &nbsp;<a class="XL" href="http://www.cabelas.com/ssubcat-1/cat21446.shtml">boat accessories</a>&nbsp; &nbsp;<a class="L" href="http://www.cabelas.com/subcat-1/cat20077.shtml">Camping Tents</a>&nbsp; &nbsp;<a class="M" href="http://www.cabelas.com/ssubcat-1/cat601934.shtml">Waterproof Boots</a>&nbsp; &nbsp;<a class="XS" href="http://www.cabelas.com/link-12/product/0014965515416a.shtml">Turkey Fryer</a>&nbsp; &nbsp;<a class="XL" href="http://www.cabelas.com/ssubcat-1/cat20103.shtml">backpacking tents</a>&nbsp; &nbsp;<a class="M" href="http://www.cabelas.com/ssubcat-1/cat410004.shtml">lure retriever</a>&nbsp; &nbsp;<a class="M" href="http://www.cabelas.com/subcat-1/cat20168.shtml">Fishing Rods</a>
+                                <td>
 
-<div align="right"><a href="http://www.cabelas.com/tag-cloud.shtml" style="font-size: 12px;">more...</a></div>
+                                <table width="100%" border="0" cellspacing="3" cellpadding="0"><tbody><tr><td style="width:20%;text-align:center;verticle-align:middle"><a href="/p-0061958216259a.shtml">Brenneke Shotgun Slugs</a></td><td style="width:20%;text-align:center;verticle-align:middle"><a href="/p-0059568228643a.shtml">AR 15 Scope Mounts</a></td><td style="width:20%;text-align:center;verticle-align:middle"><a href="/p-0011108.shtml">Sinker Molds</a></td><td style="width:20%;text-align:center;verticle-align:middle"><a href="/p-0048868.shtml">Shearling Boots</a></td><td style="width:20%;text-align:center;verticle-align:middle"><a href="/ammo.shtml">Ammo Sales</a></td></tr><tr><td style="width:20%;text-align:center;verticle-align:middle"><a href="/p-0003715212964a.shtml">223 Ammo</a></td><td style="width:20%;text-align:center;verticle-align:middle"><a href="/archery.shtml">Archery Supplies</a></td><td style="width:20%;text-align:center;verticle-align:middle"><a href="/truck-bed-accessories.shtml">Truck Tents</a></td><td style="width:20%;text-align:center;verticle-align:middle"><a href="/p-0006386.shtml">Double Barrel Shotgun</a></td><td style="width:20%;text-align:center;verticle-align:middle"><a href="/p-0031371216790a.shtml">Bulk 308 Ammo</a></td></tr><tr><td style="width:20%;text-align:center;verticle-align:middle"><a href="/trijicon.shtml">Trijicon Rifle Scopes</a></td><td style="width:20%;text-align:center;verticle-align:middle"><a href="/slippers.shtml">Men's Slippers</a></td><td style="width:20%;text-align:center;verticle-align:middle"><a href="/p-0018850.shtml">SKS Gun Stocks</a></td><td style="width:20%;text-align:center;verticle-align:middle"><a href="/crimson-trace.shtml">Crimson Trace Laser Grips</a></td><td style="width:20%;text-align:center;verticle-align:middle"><a href="/bargain-cave.shtml">Sales &amp; Discounts</a></td></tr></tbody></table>
 
-            </td>
-  </tr>
-</tbody></table></td></tr></tbody></table><br>&nbsp;<br><table border="0" cellspacing="0" cellpadding="2" width="606">
+                                <div align="right"><a href="http://www.cabelas.com/tag-cloud.shtml" style="font-size: 12px;">more...</a></div>
+
+                                </td>
+                                </tr>
+                                </tbody></table></td></tr></tbody></table><br>&nbsp;<br>
+                        <table border="0" cellspacing="0" cellpadding="2" width="606">
          <form action="http://www.cabelas.com/cabelas/en/templates/registration/newsletter-home.jsp?_DARGS=/cabelas/en/common/catalog/footer.jsp&amp;cmCat=netcon&amp;cm_ven=netcon&amp;cm_cat=&amp;cm_pla=&amp;cm_ite=netcon" method="post"></form><input value="ISO-8859-1" type="hidden" name="_dyncharset">
 <tbody><tr>
 <td class="header" align="right" width="60%">Get Cabela's best sales &amp; specials by e-mail</td>
@@ -1237,8 +1237,8 @@ document.searchForm.Ntt.select();
 <table border="0" cellspacing="0" cellpadding="0" width="606">
 <tbody><tr>
 <td class="normal" align="center"> <a href="http://phx.corporate-ir.net/phoenix.zhtml?c=177739&amp;p=irol-irhome" rel="nofollow">Investor Relations</a> | <a href="http://cabelas.kenexa.com/cabelas/cc/Home.ss" rel="nofollow">Careers</a> | <a href="http://www.cabelas.com/catalog-catalog-request.shtml">Free Catalog</a> | <a href="http://corporateoutfitter.cabelas.com/" rel="nofollow">Corporate Sales</a> | <a href="http://www.cabelas.com/sitemap.shtml">Site Map</a> |        <a href="http://www.cabelas.com/cabelas/en/templates/registration/login-track-order-home.jsp?_DARGS=/cabelas/en/common/catalog/footer.jsp.1_A&amp;_DAV=footer" rel="nofollow">Track Your Order</a>   
-<br> <a href="http://www.cabelas.com/outdoor-adventures.shtml">Outdoor Adventures</a> | <a href="http://www.cabelas.com/explorations.shtml">Cabela's Travel Service</a> |
-<a href="http://www.cabelastrophyproperties.com" onclick="cmCreateManualPageviewTag(&quot;Trophy_Properties&quot;,&quot;Trophy_Properties&quot;,&quot;http://www.cabelastrophyproperties.com/&quot;,document.URL)" target="_blank" rel="nofollow">Trophy Properties</a> | <a href="http://www.cabelas.com/community-inthefield-fieldguides-Fieldguides-home-tag-hints.shtml">Cabela's TAGS</a>
+<br> <a href="http://www.cabelas.com/outdoor-adventures.shtml">Hunting &amp; Fishing Trips</a> | <a href="http://www.cabelas.com/explorations.shtml">Cabela's Travel Service</a> |
+<a href="http://www.cabelastrophyproperties.com" onclick="cmCreateManualPageviewTag(&quot;Trophy_Properties&quot;,&quot;Trophy_Properties&quot;,&quot;http://www.cabelastrophyproperties.com/&quot;,document.URL)" target="_blank" rel="nofollow">Recreational Real Estate</a> | <a href="http://www.cabelas.com/community-inthefield-fieldguides-Fieldguides-home-tag-hints.shtml">Big Game Tags</a>
 <br><br>©1996-2008 Cabela's Inc. All Rights Reserved<br>Please read Cabela's <a href="http://www.cabelas.com/community-customerservice-privacy.shtml" target="_blank">Privacy Policy</a> and <a href="http://www.cabelas.com/community-customerservice-legal-notices.shtml">Legal Notices</a>.
 <br><br>
 <table border="0" cellspacing="5" cellpadding="0">
@@ -1253,7 +1253,7 @@ document.searchForm.Ntt.select();
 </tbody></table>    
 </div>
 
-<info app="" server="" name:="" cabnavap0="" drp="" port:="" 8504="">  
+<info app="" server="" name:="" cabnavap4="" drp="" port:="" 8501="">  
 </info></td>
 </tr>
 </tbody></table>
